Change error page to actionFailed page

--- a/WebDemo/web/actionFailed.html
+++ b/WebDemo/web/actionFailed.html
@@ -6,11 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Error</title>
+        <title>Action fail</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1 style="color:red">Opps, something went wrong</h1>
+        <h1>Something went wrong</h1>
+        <h2>It seems that your action has failed to update and delete.</h2>
+        <a href="searchAction">Return to main page</a>
     </body>
 </html>
