--- a/WebDemo/web/success.html
+++ b/WebDemo/web/success.html
@@ -11,11 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="cartCheckout">
-            Your name <input type="text" name="txtCusName" value="" /><br/>
-            Your address <input type="text" name="txtCusAddress" value="" /><br/>
-            <input type="submit" value="Checkout" />
-            <input type="reset" value="Reset" />
-        </form>
+        <h1>Checkout successfully</h1>
+        <a href="StoreViewServlet">Continue shopping</a>
     </body>
 </html>
