--- a/WebDemo/web/login.html
+++ b/WebDemo/web/login.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <form action="loginAction" method="POST">
             Username <input type="text" name="txtUsername" value="" /> <br/>
             Password <input type="password" name="txtPassword" value="" /> <br/>
-            <input type="submit" value="Login" name="btnLogin" />
+            <input type="submit" value="Login"/>
             <input type="reset" value="reset" /> <br/>
         </form><br>
         
