--- a/WebDemo/web/register.html
+++ b/WebDemo/web/register.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             Confirm Password <input type="password" name="txtConfirm" value=""/><br/>
             Class name <input type="text" name="txtClassName" value="">
             Eg:abc def ghj<br/>
-            <input type="submit" value="Register" name="btnLogin" />
+            <input type="submit" value="Register"/>
             <input type="reset" value="Reset" />
         </form>
     </body>
