--- a/WebDemo/web/register.html
+++ b/WebDemo/web/register.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>Register</h1>
         <form action="registerAction" method="POST">
             Username <input type="text" name="txtUsername" value=""/>
             Eg:abc123<br/>
